@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2715 2005/01/15 01:37:33 suz Exp $
+$KAME: CHANGELOG,v 1.2716 2005/01/16 02:48:30 suz Exp $
 
 <200501>
+2005-01-15  suz@crl.hitachi.co.jp
+	* kame/sys/netinet6/ip6_output: fixed a path MTU discovery failure 
+	  on FreeBSD5.
+
 2005-01-15  suz@crl.hitachi.co.jp
 	* kame/sys/netinet6/icmp6.c: fixed an ICMPv6 Redirect message corruption
 
